<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:id="@+id/mTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
            android:textColor="@android:color/background_dark" android:textStyle="bold|italic"
            android:textAllCaps="false" android:textSize="18sp"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/mTitle" android:id="@+id/apiLL"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp">
        <TextView
                android:text="@string/api_key"
                android:layout_width="150dp"
                android:layout_height="wrap_content" android:id="@+id/apiKeyTV" android:layout_weight="1"
                android:textSize="18sp" android:textAlignment="textEnd"
                android:textColor="@android:color/holo_orange_dark" android:textStyle="bold"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/apiKeyET" android:layout_weight="1"
                android:text="@string/this_is_an_api_key" android:hint="@string/enter_api_key"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/apiLL" android:id="@+id/passKeyLL"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp">
        <TextView
                android:text="@string/pass_key"
                android:layout_width="180dp"
                android:layout_height="wrap_content" android:id="@+id/passKeyTV" android:layout_weight="1"
                android:textSize="18sp" android:textAlignment="textEnd"
                android:textColor="@android:color/holo_orange_dark" android:textStyle="bold"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/passKeyET" android:layout_weight="1"
                android:text="@string/whoknowsthekey" android:hint="@string/must_have_13_characters"/>
    </LinearLayout>
    <Button
            android:text="@string/encrypt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/encryptBT" android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/passKeyLL" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    />
    <TextView
            android:layout_width="0dp"
            android:layout_height="50dp" android:id="@+id/encryptTV"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/encryptBT" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:textColor="@color/colorPrimary"
            android:background="#DDF7FA"/>
    <Button
            android:text="@string/decrypt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/decryptBT" android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/encryptTV" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    />
    <TextView
            android:layout_width="0dp"
            android:layout_height="50dp" android:id="@+id/decryptTV"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/decryptBT" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            android:textColor="@android:color/holo_red_light" android:background="#EEEAC9"/>

</android.support.constraint.ConstraintLayout>